module(name = "cxx.rs")

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_rust", version = "0.42.1")
bazel_dep(name = "rules_cc", version = "0.0.9")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    versions = ["1.78.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//demo:Cargo.toml",
        "//:flags/Cargo.toml",
        "//:gen/build/Cargo.toml",
        "//:gen/cmd/Cargo.toml",
        "//:gen/lib/Cargo.toml",
        "//:macro/Cargo.toml",
        "//:tests/ffi/Cargo.toml",
    ],
)
use_repo(crate, "crates")
